adicionando as correções modulo coookies
